--- a/app/views/granules/ccmeo.xml.erb
+++ b/app/views/granules/ccmeo.xml.erb
@@ -7,15 +7,15 @@
    <Tags>Radarsat-1 Radarsat-2 Satellite Scenes Remote Sensing</Tags>
    <Contact>bsa@ccrs.nrcan.gc.ca</Contact>
 <!-- with reference to the Url element below, the startIndex and count parameters are mutually exclusive from the startPage parameter - the startPage parameter cannot be used with the startIndex and count parameters -->
-   <Url type="text/html" template="http://ceocat.ccrs.nrcan.gc.ca/cgi-bin/opensearch_r1.sh?q=<%= @dataset_id %>&amp;id={geo:id?}&amp;bbox={geo:box?}&amp;dtstart={time:start?}&amp;dtend={time:end?}&amp;pw={startPage?}&amp;startIndex={startIndex?}&amp;count={count?}<%
+   <Url type="text/html" template="https://eodms-sgdot.nrcan-rncan.gc.ca/apps/cgi/opensearch/eodms_opensearch_r1.sh?q=<%= @dataset_id %>&amp;id={geo:id?}&amp;bbox={geo:box?}&amp;dtstart={time:start?}&amp;dtend={time:end?}&amp;pw={startPage?}&amp;startIndex={startIndex?}&amp;count={count?}<%
      if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>&amp;clientId=<%= @client_id_model.clientId %><% end %>">
-        <param:Parameter name="dtstart" value="{time:start}" minimum="1"  minInclusive = '<%= @begin %>' maxInclusive = '<%= @end %>' title="Temporal Start"/>
-        <param:Parameter name="dtend" value="{time:end}" minimum="0"  minInclusive = '<%= @begin %>' maxInclusive = '<%= @end %>' maxPeriod="P14D" relativeTo="{time:start}" title="Temporal End" />
+        <param:Parameter name="dtstart" value="{time:start}" minimum="1"  minInclusive='<%= @begin %>' maxInclusive='<%= @end %>' title="Temporal Start"/>
+        <param:Parameter name="dtend" value="{time:end}" minimum="0"  minInclusive='<%= @begin %>' maxInclusive='<%= @end %>' maxPeriod="P14D" relativeTo="{time:start}" title="Temporal End" />
    </Url>
-   <Url type="application/atom+xml" template="http://ceocat.ccrs.nrcan.gc.ca/cgi-bin/opensearch_r1.sh?q=<%= @dataset_id %>&amp;id={geo:id?}&amp;bbox={geo:box?}&amp;dtstart={time:start?}&amp;dtend={time:end?}&amp;pw={startPage?}&amp;startIndex={startIndex?}&amp;count={count?}&amp;format=atom<%
+   <Url type="application/atom+xml" template="https://eodms-sgdot.nrcan-rncan.gc.ca/apps/cgi/opensearch/eodms_opensearch_r1.sh?q=<%= @dataset_id %>&amp;id={geo:id?}&amp;bbox={geo:box?}&amp;dtstart={time:start?}&amp;dtend={time:end?}&amp;pw={startPage?}&amp;startIndex={startIndex?}&amp;count={count?}&amp;format=atom<%
      if @client_id_model.valid? && !@client_id_model.clientId.blank? -%>&amp;clientId=<%= @client_id_model.clientId %><% end %>">
-        <param:Parameter name="dtstart" value="{time:start}" minimum="1"  minInclusive = '<%= @begin %>' maxInclusive = '<%= @end %>' title="Temporal Start"/>
-        <param:Parameter name="dtend" value="{time:end}" minimum="0"  minInclusive = '<%= @begin %>' maxInclusive = '<%= @end %>' maxPeriod="P14D" relativeTo="{time:start}" title="Temporal End" />
+        <param:Parameter name="dtstart" value="{time:start}" minimum="1"  minInclusive='<%= @begin %>' maxInclusive='<%= @end %>' title="Temporal Start"/>
+        <param:Parameter name="dtend" value="{time:end}" minimum="0"  minInclusive='<%= @begin %>' maxInclusive='<%= @end %>' maxPeriod="P14D" relativeTo="{time:start}" title="Temporal End" />
    </Url>
    <LongName>Metadata and browse imagery are obtained from a search of the CEOCat-NEODF catalogues at CCMEO, Natural Resources Canada</LongName>
 <!-- the following 2 examples apply to searching for Radarsat-1 raw scenes -->
